# bookish-spoon

backend/: .gitignore  docker-compose.yml
backend/api/: .pre-commit-config.yaml  dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt
backend/api/app/: main.py  schema.py  settings.py
mobile/: .gitignore  pubspec.yaml
mobile/android/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Notifications.xcscheme
mobile/lib/: advanced_options_page.dart  app_config.dart  channel_list_page.dart  confirm_account_page.dart  localizations.dart  login_page.dart  main.dart  signup_page.dart
mobile/lib/env/: env.dart
mobile/lib/routes/: app_routes.dart  routes.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
